# icp-rust-sample

./: .gitignore  Cargo.toml  can.did  dfx.json
src/: env.rs  lib.rs
